@@ -1,3 +1,4 @@
+* Show number and reference in sale rec_name
 * Remove support for Python 2.7
 * Invoice sold product instead of shipped product
 * Prevent delete lines if sale is not draft or canceled
